# heimdall

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  heimdall.yml
.github/workflows/: ci.yml  release.yml
deploy/: Dockerfile
docs/: README.md  architecture.md  configuration.md  operation.md  self-hosting.md
heimdall/: __init__.py  app.py  config.py  context.py  context_cli.py  db.py  diff_anchor.py  github.py  lens.py  queue.py  refresh.py  repo_config.py  webhook.py  worker.py
scripts/: replay_webhook.py
tests/: test_config.py  test_context.py  test_db.py  test_diff_anchor.py  test_github.py  test_lens.py  test_lens_sandbox.py  test_lens_sandbox_live.py  test_lens_subprocess.py  test_queue.py  test_readme_config.py  test_refresh.py  test_replay_webhook.py  test_repo_config.py  test_synthesis.py  test_webhook.py  test_worker.py
