[project]
name = "heimdall"
version = "0.1.0"
description = "GitHub App that auto-reviews pull requests with a 3-lens Claude engine."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Will Chastain", email = "chastainfamacc@gmail.com" }]
dependencies = [
    "aiosqlite>=0.22.1",
    "arq>=0.28.0",
    "cryptography>=49.0.0",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest>=9.1.0",
    "ruff>=0.15.18",
    "anyio>=4.14.0",
    "httpx>=0.28.1",
]

[project.scripts]
heimdall-worker = "heimdall.worker:main"
heimdall-context = "heimdall.context_cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["\\.venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "strict"
