[project]
name = "heimdall"
version = "0.5.0"
description = "GitHub App that auto-reviews pull requests with a 3-lens Claude engine."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Will Chastain", email = "chastainfamacc@gmail.com" }]
dependencies = [
    "aiosqlite>=0.22.1",
    "arq>=0.28.0",
    "cryptography>=49.0.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pyyaml>=6.0.2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.0.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "anyio>=4.14.0",
    "httpx>=0.28.1",
    "types-pyyaml>=6.0.12",
]

[project.scripts]
heimdall-worker = "heimdall.worker:main"
heimdall-context = "heimdall.context_cli:main"
heimdall-refresh = "heimdall.refresh:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Scope the wheel to the heimdall package so the build never tries to ship the
# top-level tests/ and scripts/ dirs (and so the deploy image installs heimdall
# non-editable under the venv, with real console-script entry points).
[tool.hatch.build.targets.wheel]
packages = ["heimdall"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["\\.venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=heimdall --cov-report=xml --cov-report=term-missing"
asyncio_mode = "strict"
# Put the repo root on sys.path so tests can import the dev-only scripts/ package
# (the replay helper) alongside the installed heimdall package.
pythonpath = ["."]

[tool.coverage.run]
source = ["heimdall"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError", "\\.\\.\\."]
